import { BaseService, type ServiceConfig } from './base.js';
import { create } from "@bufbuild/protobuf";
import type { Client } from "@connectrpc/connect";

// Import organization service types when they become available
// import type { 
//   OrganizationService as OrganizationServiceDef,
//   CreateOrganizationRequest,
//   CreateOrganizationResponse,
//   GetOrganizationRequest,
//   GetOrganizationResponse,
//   UpdateOrganizationRequest,
//   UpdateOrganizationResponse,
//   ListOrganizationsRequest,
//   ListOrganizationsResponse,
//   DeleteOrganizationRequest,
//   DeleteOrganizationResponse
// } from '../gen/services/v1/organization_pb.js';

/**
 * Organization service for managing organization-related operations
 * This is a placeholder implementation - uncomment and implement when the protobuf definitions are available
 */
export class OrganizationService extends BaseService {
  // private client: Client<typeof OrganizationServiceDef>;

  constructor(config: ServiceConfig) {
    super(config);
    // this.client = this.createClient(OrganizationServiceDef);
  }

  /**
   * Create a new organization
   */
  async createOrganization(name: string, description?: string): Promise<any> {
    this.requireAuth('create organization');
    
    // Placeholder implementation
    throw new Error('Organization service not yet implemented. Protobuf definitions needed.');
    
    // const operation = async () => {
    //   const request = create(CreateOrganizationRequestSchema, { name, description: description || '' });
    //   return await this.client.createOrganization(request);
    // };

    // return this.withRetry(operation, 'create organization');
  }

  /**
   * Get organization by ID
   */
  async getOrganization(organizationId: string): Promise<any> {
    this.requireAuth('get organization');
    
    // Placeholder implementation
    throw new Error('Organization service not yet implemented. Protobuf definitions needed.');
  }

  /**
   * Update organization
   */
  async updateOrganization(organizationId: string, updates: any): Promise<any> {
    this.requireAuth('update organization');
    
    // Placeholder implementation
    throw new Error('Organization service not yet implemented. Protobuf definitions needed.');
  }

  /**
   * List organizations
   */
  async listOrganizations(pageSize?: number, pageToken?: string): Promise<any> {
    this.requireAuth('list organizations');
    
    // Placeholder implementation
    throw new Error('Organization service not yet implemented. Protobuf definitions needed.');
  }

  /**
   * Delete organization
   */
  async deleteOrganization(organizationId: string): Promise<void> {
    this.requireAuth('delete organization');
    
    // Placeholder implementation
    throw new Error('Organization service not yet implemented. Protobuf definitions needed.');
  }
}